[package]
name = "dekoder_py_hn_tui"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Hacker News TUI"
repository = "https://github.com/Dekoder-py/hn_tui"
readme = "README.md"

[[bin]]
name = "hn_tui"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.5"
open = "5.3.5"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
